# chat-ai-cms

./: .env.example  .gitignore  ADMIN_DASHBOARD.md  ADMIN_LOGIN_GUIDE.md  ADMIN_SETUP.md  ADMIN_SETUP_GUIDE.md  AUTOMATIC_PROCESSING_GUIDE.md  BOTS_PAGE_FIX_SUMMARY.md  BOT_DETAILS_FIX_SUMMARY.md  BOT_EDIT_PROVIDERS_FIX.md  BOT_SCOPE_CONFIGURATION_GUIDE.md  CHAT_SYSTEM_UPDATES.md  CONVERSATION_CONTEXT_GUIDE.md  DASHBOARD_GUIDE.md  DATABASE_STRUCTURE.md  DATASET_CONTENT_ENHANCEMENT.md  DATASET_STATISTICS_FIX.md  EFFICIENT_CONTEXT_METHODS.md  EFFICIENT_METHODS_SUMMARY.md  ENHANCED_DATASET_MANAGEMENT.md  FOLDER_RENAME_SUMMARY.md  FRONTEND_SCOPE_IMPLEMENTATION.md  PRODUCTION_BOT_SETUP_FLOW.md  QUICK_START_GUIDE.md  README.md  TENANT_DASHBOARD_GUIDE.md  admin_login_helper.py  admin_user_manager.py  alembic.ini  configure_bot_strictness.py  configure_strictness_examples.py  docker-compose.admin.yml  docker-compose.yml  production_bot_demo.py  public-widget-demo.html  pyproject.toml  schema.sql  simple-chat-test.html  start-all.sh  status.sh  (+5 more)
.github/: copilot-instructions.md
.github/chatmodes/: polover.chatmode.md
admin-dashboard/: .env.example  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
admin-dashboard/src/app/: globals.css  layout.tsx  page.tsx  theme.ts
admin-dashboard/src/config/: index.ts
admin-dashboard/src/hooks/: useAuth.tsx
admin-dashboard/src/services/: api.ts  auth.ts  index.ts  tenant.ts
admin-dashboard/src/types/: index.ts
alembic/: env.py
api-server/: README.md  context_response1.json  create_admin_simple.py  create_math_bot_example.py  create_tenant_with_auth.py  create_test_bots.py  data_backup.sql  doc_id.txt  efficient_response1.json  fix_redis_rq.py  pyproject.toml  requirements.txt  response1.json  session.txt  session_id.txt  test_auto_processing.py  test_bot_api.py  test_bot_details_fix.py  test_bot_edit_providers.py  test_bots_crud.py  test_dataset_content.py  test_dataset_frontend.py  test_document_details.py  test_enhanced_datasets.py  test_processing_fix.py  test_scopes_api.py  trigger_processing.py
api-server/alembic/: script.py.mako
api-server/alembic/versions/: 2025_09_10_0530-consolidated_init_clean_multi_provider.py  2025_09_10_1300-0196733d92c4_add_admin_tables.py  2025_09_11_0936-fe3b4e5d01aa_fix_tenant_ai_provider_schema.py  2025_09_11_1500-add_tenant_auth_fields.py  2025_09_11_1909-ae247a1df74e_add_bot_datasets_relationship_table.py
api-server/app/: main.py  models.py  schemas.py
api-server/app/routers/: admin_simple.py  chat.py
api-server/app/routers/admin/: __init__.py  auth.py  tenants.py
api-server/app/routers/tenant/: __init__.py  ai_providers.py  auth.py  bots.py  conversations.py  dashboard.py  datasets.py  documents.py  scopes.py
api-server/app/services/: ai_provider_service.py  chat_service.py  document_processing_service.py  file_extraction_service.py  guardrail_service.py  job_queue_service.py  retrieval_service.py  title_generation_service.py
api-server/app/workers/: document_worker.py
api-server/docker/: Dockerfile
api-server/docker/nginx/: nginx.conf
api-server/docker/postgres/: init.sql
api-server/scripts/: create_admin_user.py  create_admin_users.py
api-server/uploads/: ae94cb88-a37b-4059-afc6-1e218ce6ff4e_test_doc.txt  ae94cb88-a37b-4059-afc6-1e218ce6ff4e_test_upload.txt  c4ef1368-d170-441c-89d7-252fab29f208_copilot_system_requirements.md
app/: db.py  deps.py  main.py  models.py  schemas.py
app/admin/: __init__.py
app/routers/: chat.py  health.py
app/routers/admin/: auth.py  dashboard.py  (+2 more)
app/services/: ai_provider_service.py  chat_service.py
app/workers/: document_worker.py
docker/: Dockerfile
docs/: API_ENDPOINTS.md  DATABASE_SCHEMA.md  DEVELOPMENT_WORKFLOW.md  README.md
tenant-dashboard/: README.md  next.config.js  package-lock.json  package.json
uploads/: .gitkeep
(+119 files in other folders)
